ubiquity (2.2.21) UNRELEASED; urgency=low

  [ Evan Dandrea ]
  * Honor user-setup/force-encrypt-home (LP: #566552).
  * Check for LTS in the release name (LP: #558488).

  [ Colin Watson ]
  * Handle new partman/confirm_nooverwrite question properly (LP: #556373).

 -- Evan Dandrea <evand@ubuntu.com>  Mon, 19 Apr 2010 15:43:06 +0100

ubiquity (2.2.20) lucid; urgency=low

  * Use allow_change_step(False) from the KDE portions of the partman
    component when necessary (LP: #563309).

 -- Evan Dandrea <evand@ubuntu.com>  Mon, 19 Apr 2010 09:21:49 +0100

ubiquity (2.2.19) lucid; urgency=low

  * add support for omap bootloader installation

 -- Oliver Grawert <ogra@ubuntu.com>  Mon, 19 Apr 2010 09:33:15 +0200

ubiquity (2.2.18) lucid; urgency=low

  [ Evan Dandrea ]
  * Force garbage collection so we don't end up with stray X resources
    when we kill the X server (LP: #556555).
  * Fix the Portuguese and Latvian translations of the variable name
    RELEASE (LP: #564517).
  * Fix a missing closing bold tag in the Portuguese and Polish
    translations (LP: #564545).
  * Fix labels not expanding vertically to fit their text (LP: #560114,
    LP: #557164, LP: #520898).
  * Do not translate variable names in the Amharic translation
    (LP: #564582).
  * Start the window manager via ck-launch-session so pulseaudio is
    granted access to the sound devices (LP: #549738).
  * Update translations from Launchpad.
  * Automatic update of included source packages: console-setup
    1.34ubuntu14, flash-kernel 2.13ubuntu16, hw-detect 1.73ubuntu3,
    partman-auto 89ubuntu6, partman-base 139ubuntu5, partman-ext3
    58ubuntu3, partman-target 64ubuntu8, user-setup 1.28ubuntu6.

  [ Colin Watson ]
  * Break out of oem-config-firstboot's main loop if oem-config-wrapper
    succeeds (LP: #558593).
  * Quit plymouth before starting either the emergency noninteractive
    ubiquity frontend in automatic mode, or oem-config's debconf frontend.