@@ -3,6 +3,8 @@ ubiquity (2.2.21) UNRELEASED; urgency=low
   [ Evan Dandrea ]
   * Honor user-setup/force-encrypt-home (LP: #566552).
   * Check for LTS in the release name (LP: #558488).
+  * Hide the keyboard query dialog when we encounter an error parsing
+    the keymap decision tree (LP: #553087).
 
   [ Colin Watson ]
   * Handle new partman/confirm_nooverwrite question properly (LP: #556373).
